# TripoSR

./: pyproject.toml
tsr/: __init__.py
tsr/models/: __init__.py
tsr/models/tokenizers/: __init__.py
tsr/models/transformer/: __init__.py
